feat: 接收后端Sdk性能数据时，模块不存在则新增